Add nom dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "pcfg_tool"
 version = "0.1.0"
 edition = "2021"
+authors = ["Johannes Hayeß <jhaye@mailbox.org>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nom = "7.1.1"
