--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ authors = ["Johannes Hayeß <jhaye@mailbox.org>"]
 
 [dependencies]
 nom = "7.1.1"
+clap = { version = "3.1.8", features = ["derive"] }
