--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ authors = ["Johannes Hayeß <jhaye@mailbox.org>"]
 [dependencies]
 nom = "7.1.1"
 clap = { version = "3.1.8", features = ["derive"] }
+multimap = "0.8.3"
