--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ clap = { version = "3.1.8", features = ["derive"] }
 multimap = "0.8.3"
 smallstr = "0.3.0"
 fxhash = "0.2.1"
+float-ord = { git = "https://github.com/notriddle/rust-float-ord", branch = "master" }
