--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ smallstr = "0.3.0"
 fxhash = "0.2.1"
 rayon = "1.5.3"
 float-ord = { git = "https://github.com/notriddle/rust-float-ord", branch = "master" }
+
+[profile.release]
+lto = true
+codegen-units = 1
