Comment out most things for progressive verification

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ multimap = "0.8.3"
 fxhash = "0.2.1"
 rayon = "1.5.3"
 float-ord = { git = "https://github.com/notriddle/rust-float-ord", branch = "master" }
-
 creusot-contracts = { git = "https://github.com/xldenis/creusot", branch = "master" }
+
+[features]
+contracts = ["creusot-contracts/contracts"]
 
 [profile.release]
 lto = true
